# libjustify

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md
.github/workflows/: build&test.yml  build_and_test.yml
docs/: Libjustify.md  TODO.md  cprintf.3.md  libjustify.md
example/: Makefile  example.c
include/: cprintf.h
src/: CMakeLists.txt  cprintf.c  cprintf.h
src/tests/: CMakeLists.txt  cprintf_test.cpp
tests/: CMakeLists.txt  cprintf_test.cpp
